--- a/notebooks/produce_dgd.ipynb
+++ b/notebooks/produce_dgd.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,9 @@
     "from plotting import plot_profile, plot_hmap\n",
     "from splitting import train_val_split\n",
     "\n",
-    "from dg_data_generator.dg_generator import (\n",
+    "from dgd_data_generator import (\n",
     "    simulate_float_from_named_basis,\n",
-    "    simulate_integer_from_float\n",
+    "    simulate_dgd\n",
     ")\n",
     "\n",
     "%matplotlib inline"
@@ -65,29 +65,34 @@
     "# MIKAL\n",
     "# Can you please fill in fixed values you find appropriate for:\n",
     "# * N: The number of females in the dataset. Maybe the same size as Jerome data?\n",
+    "# Answer: I suggest we use N=38000 as this is pretty close to the 38001 of Jerome data.\n",
     "# * T: Resolution of the temporal axis (can stick with 321).\n",
+    "# Answer: I agree, T in Jerome data is 321\n",
     "# * K: Continue to use rank 5?\n",
+    "# Answer: I will primarily be using K = 5 in my master's yes.\n",
+    "\n",
     "M = simulate_float_from_named_basis(\n",
     "    basis_name='simple_peaks', \n",
     "    N=10, \n",
     "    T=321, \n",
     "    K=5, \n",
     "    domain=[1, 4], \n",
-    "    seed=SEED\n",
+    "    random_state=SEED\n",
     ")\n",
     "\n",
     "# MIKAL\n",
     "# * What parameters have you previously used?\n",
-    "integer_parameters = {\n",
-    "    'output_domain': np.arange(1, 5),\n",
-    "    'kernel_parameter': 2.5,\n",
-    "}\n",
+    "# Answer:\n",
+    "# I've used np.arange(1,5) as these produce the integer values 1,2,3, and 4. \n",
+    "# I've used theta = 2.5 as this produces datasets with just the right amount of\n",
+    "# noise. I will continue to use theta = 2.5 and np.arange(1,5) as the primary\n",
+    "# variable choices in my master's. \n",
     "\n",
     "D = simulate_integer_from_float(\n",
     "    M, \n",
-    "    integer_parameters,\n",
-    "    return_float=False,\n",
-    "    seed=SEED\n",
+    "    domain_z=np.arange(1, 5),\n",
+    "    theta=2.5\n",
+    "    random_state=SEED\n",
     ")"
    ]
   },
@@ -107,17 +112,19 @@
     "# MIKAL:\n",
     "# * If you have an idea on which param configs we should use to derive a mask with the target \n",
     "#   densities (see dicussion on Slack), please fill then in (e.g.) mask_level etc.\n",
-    "parameters_simulate_mask = {\n",
-    "    'mask_screening_proba': np.array([0.05, 0.15, 0.40, 0.60, 0.20]),\n",
-    "    'memory_length': 10,\n",
-    "    'mask_level': 1000 #0.6\n",
-    "}\n",
+    "# Answer:\n",
+    "# Knowing a priori which level produces a given sparsity level is impossible \n",
+    "# as this is affected both by M and by screening_proba. For sparsities \n",
+    "# 100%, 80%, 50%, 20%, 10%, 5% and 3% we must find corresponding level values\n",
+    "# using trial and error.\n",
     "\n",
     "M = simulate_mask(\n",
     "    D,\n",
-    "    mask_parameters=parameters_simulate_mask,\n",
+    "    screening_proba=np.array([0.05, 0.15, 0.40, 0.60, 0.20])\n",
+    "    memory_length=10,\n",
+    "    level=1000 #0.6\n",
     "    path_dropout=PATH_TO_DROPOUT,\n",
-    "    seed=SEED\n",
+    "    random_state=SEED\n",
     ")"
    ]
   },
@@ -145,6 +152,10 @@
    "source": [
     "# MIKAL:\n",
     "# * We start out on 1 year predictions and then increase in analyses?\n",
+    "# Answer: \n",
+    "# I think this is a good idea yes. Anything smaller is too optimistic and \n",
+    "# anything larger is bound to decrease model performance.\n",
+    "\n",
     "prediction_window = 4\n",
     "\n",
     "O_val, O_train = train_val_split(X, prediction_window, method='last_observed', seed=SEED)\n",
@@ -315,5 +326,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
