WIP: Configs for decreasing density datasets.

--- a/notebooks/produce_screening.ipynb
+++ b/notebooks/produce_screening.ipynb
@@ -66,16 +66,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.062126758864524734\n"
+     ]
+    }
+   ],
    "source": [
     "prediction_window = 4\n",
     "\n",
-    "O_val, O_train = train_val_split(X, prediction_window, method='last_observed', seed=SEED)\n",
+    "O_train, O_val, valid_rows = train_val_split(X, prediction_window, method='last_observed', \n",
+    "                                             return_valid_rows=True, seed=SEED)\n",
+    "\n",
+    "X = X[valid_rows, :]\n",
+    "O_val = O_val[valid_rows, :]\n",
+    "O_train = O_train[valid_rows, :]\n",
     "\n",
     "X_val = X * O_val\n",
-    "X_train = X * O_train"
+    "X_train = X * O_train\n",
+    "\n",
+    "# NB: Quantifies density of profiles and not the complete matrix.\n",
+    "train_density = []\n",
+    "for row in X_train:\n",
+    "    last_train_idx = np.argmax(np.cumsum(row))\n",
+    "    train_density.append(np.count_nonzero(row[:last_train_idx]) / row[:last_train_idx].size)\n",
+    "\n",
+    "print(np.mean(train_density))"
    ]
   },
   {
@@ -87,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
