--- a/notebooks/produce_hmm.ipynb
+++ b/notebooks/produce_hmm.ipynb
@@ -153,10 +153,24 @@
    "source": [
     "prediction_window = 4\n",
     "\n",
-    "O_val, O_train = train_val_split(X, prediction_window, method='last_observed', seed=SEED)\n",
+    "O_train, O_val, valid_rows = train_val_split(X, prediction_window, method='last_observed', \n",
+    "                                             return_valid_rows=True, seed=SEED)\n",
+    "\n",
+    "M = M[valid_rows, :]\n",
+    "X = X[valid_rows, :]\n",
+    "O_val = O_val[valid_rows, :]\n",
+    "O_train = O_train[valid_rows, :]\n",
     "\n",
     "X_val = X * O_val\n",
-    "X_train = X * O_train"
+    "X_train = X * O_train\n",
+    "\n",
+    "# NB: Quantifies density of profiles and not the complete matrix.\n",
+    "train_density = []\n",
+    "for row in X_train:\n",
+    "    last_train_idx = np.argmax(np.cumsum(row))\n",
+    "    train_density.append(np.count_nonzero(row[:last_train_idx]) / row[:last_train_idx].size)\n",
+    "\n",
+    "print(np.mean(train_density))"
    ]
   },
   {
