WIP: making notes

--- a/notebooks/gnlm.ipynb
+++ b/notebooks/gnlm.ipynb
@@ -760,21 +760,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Sub-procedure 4** (sample new candidate neighbours):\n",
+    "1. Measure the neighbourhood overlap as the fraction of neighbors common to two nodes $i$ and $j$ using the Jaccard similarty $J = \\frac{\\mathcal{N}_i \\cap  \\mathcal{N}_j}{\\mathcal{N}_i \\cup \\mathcal{N}_j}$ where $0 \\leq J \\leq 1$.\n",
+    "2. If $J = 1: i \\rightarrow j$.\n",
+    "3. If $J < 1 \\Rightarrow \\mathcal{N}_n(i) \\cap  \\mathcal{N}_n(j) < \\max \\left \\{ \\left | \\mathcal{N}_n(i) \\right |, \\left | \\mathcal{N}_n(j) \\right | \\right \\}$ so assign $k \\in \\mathcal{N}_n(i) \\setminus \\mathcal{N}_n(j) \\rightarrow \\mathcal{N}_n(j)$ and assign $p \\in \\mathcal{N}_n(j) \\setminus \\mathcal{N}_n(i) \\rightarrow \\mathcal{N}_n(i)$. Now $\\mathcal{N}_{n + 1}(i) \\setminus \\mathcal{N}_{n + 1}(j) = \\emptyset$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Putting it all together\n",
     "\n",
-    "Derive an adjacency matrix $\\left \\{ A \\in \\mathcal{A} \\mid A = A^\\top, A_{i,j} \\geq 0 \\right \\}$ trading local for global smoothness. Let the energy over the graph be given by\n",
+    "Our goal is to derive an adjacency matrix $\\left \\{ A \\in \\mathcal{A} \\mid A = A^\\top, A_{i,j} \\geq 0 \\right \\}$ connecting together signal vectors $m \\in M$ by trading off local for global smoothness. We measure local smoothness over the neighbourhood $\\mathcal{N}(i)$ of node $i$ as $m_i - \\hat{m_i}$ where \n",
     "\n",
     "$$\n",
-    "    E(A) = \\beta \\left \\| M - \\hat{M} \\right \\|_F^2 + (1 - \\beta) tr\\left (\\hat{M}^\\top L \\hat{M}  \\right )\n",
+    "    \\hat{m}_i = \\sum_{j \\in \\mathcal{N}^*(i)} m_j \\beta^*_j, \\quad \\beta^*  = \\min_{\\beta, \\sum_j \\beta_j = 1} \\left \\| m_i - \\sum_{j \\in \\mathcal{N}^*(i)} m_j \\beta_j \\right  \\|_2^2 + \\lambda \\left \\| \\beta \\right \\|_2^2.\n",
     "$$\n",
     "\n",
-    "where \n",
+    "Here, $\\mathcal{N}^*(i)$ is the neighbourhood of node $i$ with profiles $m_j$ aligned to $m_i$ by the shift operator $S^{\\tau} m_j = m_j(t - \\tau)$ where $\\tau^* = \\arg \\max_t (m_i \\star m_j)(t)$. Moreover, a neighbouring node $j \\in \\mathcal{N}(i)$ is excluded from $\\mathcal{N}^*(i)$ unless $\\max_t (m_i \\star m_j)(t) > \\epsilon$. The global smoothness we measure using $tr (\\hat{M}^\\top L \\hat{M} )$.\n",
+    "\n",
+    "We define the energy over the graph as\n",
     "\n",
     "$$\n",
-    "    \\hat{M} = ...\n",
+    "    E(A) = \\beta \\left \\| M - \\hat{M} \\right \\|_F^2 + (1 - \\beta) tr (\\hat{M}^\\top L \\hat{M} )\n",
     "$$\n",
     "\n",
-    "We seek to minimize $E(A)$ using an adaptation of simulated annealing.\n"
+    "and seek to minimize $E(A)$ using an adaptation of simulated annealing (SA). The SA algorithm minimizes a function over a budget of $N$ iterations. For each iteration $n + 1 \\leq N$, a candidate adjacency matrix $A_{n+1}$ is selected. With $A_{n+1}$, we compute $E(A_{n + 1})$ and evaluate \n",
+    "$$\n",
+    "    P(E(A_n), E(A_{n + 1}), T(n)) \\geq u\n",
+    "$$\n",
+    "for $u \\sim U(0, 1)$. Here $P(\\cdot)$ gives the probability of accepting $A_{n+1}$ as the current adjacency matrix and $T(n)$ is the *annealing function* evalauted at step $n$. We currently define $P$ as \n",
+    "\n",
+    "$$\n",
+    "P(E(A_n), E(A_{n + 1}), T(n)) = \\begin{cases}\n",
+    "1 & \\text{ if } E(A_{n+1}) < E(A_n) \\\\ \n",
+    "\\exp\\left ( - \\left ( \\frac{E(A_{n+1}) - E(A_n)}{T} \\right ) \\right ) & \\text{ otherwise }\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "and use an annealing schedule\n",
+    "\n",
+    "$$\n",
+    "    T(n) =  \\frac{T_0}{N} \\left ( 1 - \\tanh\\left ( 10 \\frac{n}{N} - 5 \\right ) \\right )\n",
+    "$$\n",
+    "\n",
+    "Some alternative annealing schedules are\n",
+    "$$\n",
+    "T(n) = \\frac{T_0}{2} \\left ( 1 + \\cos\\left ( \\frac{n \\pi}{N} \\right ) \\right ), \\quad \n",
+    "T(n) =  \\frac{T_0}{\\cosh(10 n / N)}\n",
+    "$$\n",
+    "\n",
+    "To generate a new candidate $A_{n+1}$ we randomly select some nodes and measure the overlap between the neighbourhood for each of these nodes and the neighbourhood of each of some other randomly selected nodes. Suppose we select node $i$ and compare its neighbourhood $\\mathcal{N}_i$ against the neighbourhood of node $j$. First, we make sure $\\mathcal{N}_i \\setminus \\mathcal{N}_j = \\emptyset$. Then we measure the similarity between $\\mathcal{N}_i$ and $\\mathcal{N}_j$ using the Jaccard similarty \n",
+    "\n",
+    "$$\n",
+    "    J = \\frac{\\mathcal{N}_i \\cap  \\mathcal{N}_j}{\\mathcal{N}_i \\cup \\mathcal{N}_j}\n",
+    "$$\n",
+    "\n",
+    "where $0 \\leq J \\leq 1$. If $J = 1$ we connct $i$ to $j$. However, if $J < 1 \\Rightarrow \\mathcal{N}_n(i) \\cap  \\mathcal{N}_n(j) < \\max \\left \\{ \\left | \\mathcal{N}_n(i) \\right |, \\left | \\mathcal{N}_n(j) \\right | \\right \\}$ so assign $k \\in \\mathcal{N}_n(i) \\setminus \\mathcal{N}_n(j) \\rightarrow \\mathcal{N}_n(j)$ and assign $p \\in \\mathcal{N}_n(j) \\setminus \\mathcal{N}_n(i) \\rightarrow \\mathcal{N}_n(i)$. Now $\\mathcal{N}_{n + 1}(i) \\setminus \\mathcal{N}_{n + 1}(j) = \\emptyset$."
    ]
   },
   {
