WIP: alg decription

--- a/notebooks/gnlm.ipynb
+++ b/notebooks/gnlm.ipynb
@@ -760,16 +760,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sub-procedure 4** (sample new candidate neighbours):\n",
-    "1. Measure the neighbourhood overlap as the fraction of neighbors common to two nodes $i$ and $j$ using the Jaccard similarty $J = \\frac{\\mathcal{N}_i \\cap  \\mathcal{N}_j}{\\mathcal{N}_i \\cup \\mathcal{N}_j}$ where $0 \\leq J \\leq 1$.\n",
-    "2. If $J = 1: i \\rightarrow j$.\n",
-    "3. If $J < 1 \\Rightarrow \\mathcal{N}_n(i) \\cap  \\mathcal{N}_n(j) < \\max \\left \\{ \\left | \\mathcal{N}_n(i) \\right |, \\left | \\mathcal{N}_n(j) \\right | \\right \\}$ so assign $k \\in \\mathcal{N}_n(i) \\setminus \\mathcal{N}_n(j) \\rightarrow \\mathcal{N}_n(j)$ and assign $p \\in \\mathcal{N}_n(j) \\setminus \\mathcal{N}_n(i) \\rightarrow \\mathcal{N}_n(i)$. Now $\\mathcal{N}_{n + 1}(i) \\setminus \\mathcal{N}_{n + 1}(j) = \\emptyset$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Putting it all together\n",
     "\n",
     "Our goal is to derive an adjacency matrix $\\left \\{ A \\in \\mathcal{A} \\mid A = A^\\top, A_{i,j} \\geq 0 \\right \\}$ connecting together signal vectors $m \\in M$ by trading off local for global smoothness. We measure local smoothness over the neighbourhood $\\mathcal{N}(i)$ of node $i$ as $m_i - \\hat{m_i}$ where \n",
@@ -778,7 +768,7 @@
     "    \\hat{m}_i = \\sum_{j \\in \\mathcal{N}^*(i)} m_j \\beta^*_j, \\quad \\beta^*  = \\min_{\\beta, \\sum_j \\beta_j = 1} \\left \\| m_i - \\sum_{j \\in \\mathcal{N}^*(i)} m_j \\beta_j \\right  \\|_2^2 + \\lambda \\left \\| \\beta \\right \\|_2^2.\n",
     "$$\n",
     "\n",
-    "Here, $\\mathcal{N}^*(i)$ is the neighbourhood of node $i$ with profiles $m_j$ aligned to $m_i$ by the shift operator $S^{\\tau} m_j = m_j(t - \\tau)$ where $\\tau^* = \\arg \\max_t (m_i \\star m_j)(t)$. Moreover, a neighbouring node $j \\in \\mathcal{N}(i)$ is excluded from $\\mathcal{N}^*(i)$ unless $\\max_t (m_i \\star m_j)(t) > \\epsilon$. The global smoothness we measure using $tr (\\hat{M}^\\top L \\hat{M} )$.\n",
+    "Here, $j \\in \\mathcal{N}^*(i)$ is a neighbour of node $i$. Each $j$ associate a signal vector $m_j$, which we aligned to $m_i$ by means of cross-correlation $\\tau^* = \\arg \\max_t (m_i \\star m_j)(t)$ and the shift operator $S^{\\tau^*} m_j = m_j(t - \\tau^*)$. Moreover, node $j$ is only included in $\\mathcal{N}^*(i)$ if $\\max_t (m_i \\star m_j)(t) > \\epsilon$. The global smoothness we measure using $tr (\\hat{M}^\\top L \\hat{M} )$.\n",
     "\n",
     "We define the energy over the graph as\n",
     "\n",
@@ -811,13 +801,13 @@
     "T(n) =  \\frac{T_0}{\\cosh(10 n / N)}\n",
     "$$\n",
     "\n",
-    "To generate a new candidate $A_{n+1}$ we randomly select some nodes and measure the overlap between the neighbourhood for each of these nodes and the neighbourhood of each of some other randomly selected nodes. Suppose we select node $i$ and compare its neighbourhood $\\mathcal{N}_i$ against the neighbourhood of node $j$. First, we make sure $\\mathcal{N}_i \\setminus \\mathcal{N}_j = \\emptyset$. Then we measure the similarity between $\\mathcal{N}_i$ and $\\mathcal{N}_j$ using the Jaccard similarty \n",
+    "To generate a new candidate $A_{n+1}$ we randomly select some nodes and measure the overlap between the neighbourhood for each of these nodes and the neighbourhood of each of some other randomly selected nodes. Suppose we select node $i$ and compare its neighbourhood $\\mathcal{N}_i$ against the neighbourhood of node $j$. First, we make sure $i \\notin \\mathcal{N}_j$. Then we measure the similarity between $\\mathcal{N}_i$ and $\\mathcal{N}_j$ using the Jaccard similarty \n",
     "\n",
     "$$\n",
     "    J = \\frac{\\mathcal{N}_i \\cap  \\mathcal{N}_j}{\\mathcal{N}_i \\cup \\mathcal{N}_j}\n",
     "$$\n",
     "\n",
-    "where $0 \\leq J \\leq 1$. If $J = 1$ we connct $i$ to $j$. However, if $J < 1 \\Rightarrow \\mathcal{N}_n(i) \\cap  \\mathcal{N}_n(j) < \\max \\left \\{ \\left | \\mathcal{N}_n(i) \\right |, \\left | \\mathcal{N}_n(j) \\right | \\right \\}$ so assign $k \\in \\mathcal{N}_n(i) \\setminus \\mathcal{N}_n(j) \\rightarrow \\mathcal{N}_n(j)$ and assign $p \\in \\mathcal{N}_n(j) \\setminus \\mathcal{N}_n(i) \\rightarrow \\mathcal{N}_n(i)$. Now $\\mathcal{N}_{n + 1}(i) \\setminus \\mathcal{N}_{n + 1}(j) = \\emptyset$."
+    "where $0 \\leq J \\leq 1$. If $J = 1$ we connct $i$ to $j$. However, if $J < 1 \\Rightarrow \\mathcal{N}_n(i) \\cap  \\mathcal{N}_n(j) < \\max \\left \\{ \\left | \\mathcal{N}_n(i) \\right |, \\left | \\mathcal{N}_n(j) \\right | \\right \\}$ so assign $k \\in \\mathcal{N}_n(i) \\setminus \\mathcal{N}_n(j) \\rightarrow \\mathcal{N}_n(j)$ and assign $p \\in \\mathcal{N}_n(j) \\setminus \\mathcal{N}_n(i) \\rightarrow \\mathcal{N}_n(i)$. Now $\\mathcal{N}_{n + 1}(i) \\setminus \\mathcal{N}_{n + 1}(j) = \\emptyset$. This approach resembles collaborative filtering. "
    ]
   },
   {
@@ -831,10 +821,10 @@
     "    \n",
     "    L = csgraph.laplacian(A, normed=True)\n",
     "    \n",
-    "    loss_local =  beta * np.linalg.norm(M - M_hat) ** 2\n",
-    "    loss_global = (1 - beta) * np.trace(M_hat.T @ L @ M_hat)\n",
+    "    loss_local = np.linalg.norm(M - M_hat) ** 2\n",
+    "    loss_global = np.trace(M_hat.T @ L @ M_hat)\n",
     "    \n",
-    "    return loss_local + loss_global"
+    "    return beta * loss_local + (1 - beta) * loss_global"
    ]
   },
   {
@@ -850,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +872,7 @@
     "    # NOTE: Need to handle mix between binary and real-values if A is weighted.\n",
     "    A_star = update_adjacency(A, improved=improved, N=N_star, C=None)\n",
     "\n",
-    "    return A, energy(M, M_hat, A_star, beta), loss_new"
+    "    return A_star, energy(M, M_hat, A_star, beta), loss_new"
    ]
   },
   {
@@ -958,7 +948,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Also remove some neighbours!!!. \n",
     "def candidate_adjacency(A, m, seed=42):\n",
     "    \"\"\"\n",
     "    Args:\n",
@@ -975,7 +964,7 @@
     "    A_new = A.copy()    \n",
     "    for i in to_update:\n",
     "        \n",
-    "        # Ensure N_i \\setminus N_j = \\emptyset.\n",
+    "        # Ensure i not in N_j.\n",
     "        candidates = np.concatenate([np.arange(i), np.arange(i + 1, A.shape[0])])\n",
     "        candidates = np.random.choice(candidates, replace=False, \n",
     "                                      size=min(m, len(candidates)))\n",
@@ -1144,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1160,7 @@
        "       [0., 0., 0., 1., 0., 0.]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,6 +1180,9 @@
     "    \n",
     "    for T_n in T:\n",
     "        \n",
+    "        # QUESTION: When passing seed to the the function, will \n",
+    "        # this give a different A_new in each iter even if A is not \n",
+    "        # updated?\n",
     "        A_new = candidate_adjacency(A, m=m, seed=seed)\n",
     "\n",
     "        A_new, E_new, loss_new = run_step(A_new, M=M, thresh=thresh, loss=loss, \n",
@@ -1211,6 +1203,8 @@
     "print(A_init)\n",
     "print()\n",
     "\n",
+    "# Increase m to increase density in A. \n",
+    "# Increase thresh to decrease density in A. \n",
     "main_procedure(A_init, M[:n], num_epochs=10, thresh=0.5, m=2)"
    ]
   },
