WIP: reducing time cplexity

--- a/notebooks/gnlm.ipynb
+++ b/notebooks/gnlm.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "# The Algorithm\n",
     "\n",
-    "Our goal is to derive an adjacency matrix $\\left \\{ A \\in \\mathcal{A} \\mid A = A^\\top, A_{i,j} \\geq 0 \\right \\}$ connecting together signal vectors $m \\in M$ by trading off local for global smoothness. We measure local smoothness over the neighbourhood $\\mathcal{N}(i)$ of node $i$ as $m_i - \\hat{m_i}$ where \n",
+    "Our goal is to derive an adjacency matrix $A$ connecting together signal vectors $m \\in M$ by trading off local for global smoothness. We measure local smoothness over the neighbourhood $\\mathcal{N}(i)$ of node $i$ as $m_i - \\hat{m_i}$ where \n",
     "\n",
     "$$\n",
     "    \\hat{m}_i = \\sum_{j \\in \\mathcal{N}^*(i)} S^{\\tau^*_j}m_j \\beta^*_j, \\quad \\tau^*_j = \\arg \\max_t (m_i \\star m_j)(t)\n",
@@ -78,10 +78,10 @@
     "\n",
     "Here, $j \\in \\mathcal{N}^*(i)$ is the refined neighbour of node $i$. Each $j$ associate a signal vector $m_j$, which we aligned to $m_i$ by means of cross-correlation and the shift operator $S^{\\tau^*} m_j = m_j(t - \\tau^*)$. Node $j$ is only included in $\\mathcal{N}^*(i)$ if $\\max_t (m_i \\star m_j)(t) > \\epsilon$. This can potentially reduce density of $A$ for larger $\\epsilon$ by removing edges originally in $A$, making $A$ more sparse. The global smoothness we measure using $tr (\\hat{M}^\\top L \\hat{M} )$.\n",
     "\n",
-    "We define the energy over the graph as\n",
+    "We define the energy over a graph given by its adjaccency matrix as\n",
     "\n",
     "$$\n",
-    "    E(A) = \\beta \\left \\| M - \\hat{M} \\right \\|_F^2 + (1 - \\beta) tr (\\hat{M}^\\top L \\hat{M} ).\n",
+    "    E(A) = \\beta \\left \\| M - \\hat{M} \\right \\|_F^2 + (1 - \\beta) tr (\\hat{M}^\\top L \\hat{M} ), \\quad \\forall A \\mid A = A^\\top, A_{i,j} \\geq 0.\n",
     "$$\n",
     "\n",
     "By adapting the simulated annealing (SA) algorithm to our purpose, we seek the $A$ that minimizes $E$. The SA algorithm minimizes a function over a budget of $N$ iterations. For each iteration $n + 1 \\leq N$, a candidate adjacency matrix $A_{n+1}$ is selected at random. With $A_{n+1}$, we compute $E(A_{n + 1})$ and evaluate \n",
@@ -103,11 +103,7 @@
     "    T(n) =  \\frac{T_0}{2} \\left ( 1 - \\tanh\\left ( 10 \\frac{n}{N} - 5 \\right ) \\right )\n",
     "$$\n",
     "\n",
-    "with $T_0 = E(A_0)$ since is seems like a good idea to have $T_0 \\propto E$. Some alternative annealing schedules are\n",
-    "$$\n",
-    "T(n) = \\frac{T_0}{2} \\left ( 1 + \\cos\\left ( \\frac{n \\pi}{N} \\right ) \\right ), \\quad \n",
-    "T(n) =  \\frac{T_0}{\\cosh(10 n / N)}\n",
-    "$$\n",
+    "with $T_0 = E(A_0)$ since is seems like a good idea to have $T_0 \\propto E$.\n",
     "\n",
     "Our first priority when generating a new candidate $A_{n+1}$ is to ensure that each node is connected to at least one neighbour. Suppose for node $i$ that $\\mathcal{N}_n(i) = \\emptyset$, then we randomly sample some node $j$ and connect $i$ to all neighbours of $j$. If, however, $\\mathcal{N}_n(i) \\neq \\emptyset$ as well as $\\mathcal{N}_n(j) \\neq \\emptyset$, we can rely on a mechanism for selecting a new candidate $A_{n+1}$ inspired by collaboratie filtering. For some node $i$, we compare $\\mathcal{N}_n(i)$ to the neighbourhood $\\mathcal{N}_n(j)$ of node $j$, after ensuring $i \\notin \\mathcal{N}_j$, by measuring the similarity between $\\mathcal{N}_i$ and $\\mathcal{N}_j$ using the Jaccard similarty \n",
     "\n",
@@ -117,8 +113,15 @@
     "\n",
     "Here, $0 \\leq J \\leq 1$. If $J = 1$ we connect $i$ to $j$. However, if $J < 1 \\Rightarrow \\mathcal{N}_n(i) \\cap  \\mathcal{N}_n(j) < \\max \\left \\{ \\left | \\mathcal{N}_n(i) \\right |, \\left | \\mathcal{N}_n(j) \\right | \\right \\}$ so assign $k \\in \\mathcal{N}_n(j) \\setminus \\mathcal{N}_n(i) \\rightarrow \\mathcal{N}_n(i)$. Here we can potentially update $\\mathcal{N}_n(j)$ simultanously with $\\mathcal{N}_n(j)$ but this approach will break if $\\mathcal{N}_n(i) = \\emptyset$ in the first place. Find k-NN using $J$ as similarity metric. This procedure will increase the density of $A$ and complements - to some degree - the neighbourhood refinement step.\n",
     "\n",
+    "**Checkout**\n",
+    "* Let `n_candidates` and `n_active` for from very large to very small (i.e. follow $T(n)$). Means doing an initial large search for good neighbours and then refine/fine-tune these towards the end. May try an alternative annealing schedule for sampling. Have smooth updates towards the end.\n",
+    "* Let `run_step` only iterate through those nodes $i$ where $\\left \\| m_i - \\hat{m}_i \\right \\| > \\epsilon$ and skip the other nodes, assuming these can be closely approximated by their neighbours. \n",
+    "\n",
     "**NOTE**\n",
-    "* Can relate $\\epsilon$ to number of candidates and size of active set through some desired graph sparsity? Reduce number of parameters!"
+    "*  Alternative annealing schedules $$\n",
+    "T(n) = \\frac{T_0}{2} \\left ( 1 + \\cos\\left ( \\frac{n \\pi}{N} \\right ) \\right ), \\quad \n",
+    "T(n) =  \\frac{T_0}{\\cosh(10 n / N)}\n",
+    "$$"
    ]
   },
   {
@@ -315,16 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.ndimage.interpolation import shift"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {
     "scrolled": false
    },
@@ -343,6 +337,24 @@
     }
    ],
    "source": [
+    "def shift(x, k, fill_value=0):\n",
+    "    \n",
+    "    x_shifted = np.empty_like(x)\n",
+    "    \n",
+    "    if k > 0:\n",
+    "        x_shifted[:k] = fill_value\n",
+    "        x_shifted[k:] = x[:-k]\n",
+    "    \n",
+    "    elif k < 0:\n",
+    "        x_shifted[k:] = fill_value\n",
+    "        x_shifted[:k] = x[-k:]\n",
+    "    \n",
+    "    else:\n",
+    "        x_shifted[:] = x\n",
+    "        \n",
+    "    return x_shifted\n",
+    "\n",
+    "\n",
     "def cross_correlation(i, N_i, M, eps=0.5):\n",
     "    \"\"\"\n",
     "    Args:\n",
@@ -405,7 +417,7 @@
     "            m_j_shifted[k:sum(m_j > 0) + k] = m_j[m_j > 0]\n",
     "        \"\"\"\n",
     "        \n",
-    "        m_j_shifted = shift(m_j, -tau, cval=0)\n",
+    "        m_j_shifted = shift(m_j, -tau, fill_value=0)\n",
     "        \n",
     "        M_j_aligned.append(m_j_shifted)\n",
     "        \n",
@@ -758,13 +770,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_step(A, M, alpha=0, beta=0, eps=0):\n",
+    "def run_step(A, M, to_update, alpha=0, beta=0, eps=0):\n",
     "    \n",
     "    # Refined adjacency after checking correlations.\n",
     "    A_refined = np.zeros_like(A)\n",
     "    \n",
     "    M_hat = np.zeros_like(M)\n",
-    "    for i, a in enumerate(A):\n",
+    "    \n",
+    "    for i in to_update:\n",
+    "        \n",
+    "        a = A[i]\n",
+    "    #for i, a in enumerate(A):\n",
     "        \n",
     "        # Node is not connected.\n",
     "        if sum(a) < 1:\n",
@@ -834,7 +850,8 @@
     "# * Code breaks with weighted adjacency.\n",
     "# * Assume all nodes have at least one neighbour intially.\n",
     "def main_procedure(A, M, num_epochs, n_active, n_candidates, \n",
-    "                   eps=0.5, alpha=0, beta=0, seed=42, patience=10):\n",
+    "                   eps=0.5, alpha=0, beta=0, seed=42, patience=10,\n",
+    "                   epsilon=1e-6):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        patience: Maximum number of iterations without an update before exiting.\n",
@@ -855,7 +872,8 @@
     "        \n",
     "        A_new = candidate_adjacency(A, loss, n_active, n_candidates, update_j=False, rnd_state=rnd_state)\n",
     "        \n",
-    "        A_new, E_new, M_hat_new = run_step(A_new, M=M, eps=eps, alpha=alpha, beta=beta)\n",
+    "        A_new, E_new, M_hat_new = run_step(A_new, M=M, eps=eps, alpha=alpha, beta=beta,\n",
+    "                                           to_update=np.squeeze(np.where(loss > epsilon)))\n",
     "\n",
     "        # Move on to next state.\n",
     "        if p_accept(E, E_new, T_n) >= np.random.random():\n",
